<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/title_activity_phase_diagram"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:src="@drawable/phase_diagrams" />

    <Button
        android:id="@+id/generatePDButton"
        style="@style/ButtonText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/black_button"
        android:onClick="getPhaseDiagram"
        android:text="@string/button_phase_diagram"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="3pt"
        android:text="@string/hint_phase_diagram"
        android:textSize="20dp" />

    <ListView
        android:id="@+id/elListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>