<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/title_activity_materials_explorer"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:src="@drawable/materials_explorer" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp" >

        <EditText
            android:id="@+id/edit_message"
            style="@style/EditTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_rectangle"
            android:hint="@string/edit_message" />

        <Button
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="@drawable/black_button"
            android:onClick="doSearch"
            android:text="@string/button_search" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5pt" />

    <ListView
        android:id="@+id/resultList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp" >
    </ListView>

</LinearLayout>