<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/title_activity_reaction_calculator"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:src="@drawable/reaction_calculator" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/reactants"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_rectangle"
                android:hint="@string/reactants_message"
                android:padding="9dp"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/rightArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/products"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_rectangle"
                android:hint="@string/products_message"
                android:padding="9dp"
                android:textSize="18dp" />
        </LinearLayout>

        <Button
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/black_button"
            android:onClick="calculateReaction"
            android:text="@string/button_calc_reaction" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5pt" />

        <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/reactionTable"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TableRow
                android:id="@+id/titleRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip" >

                <TextView
                    android:id="@+id/reactionString"
                    style="@style/ReactionTitleText"
                    android:layout_span="3"
                    android:lineSpacingExtra="2dip" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>